# JSB

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  catalog.txt  compose.yml  docker-compose.yml  main.cpp
src/: Main.cpp  Simulation.cpp  Simulation.h  main.cpp  simulation.cpp  simulation.h
src/input/: InputDevice.h  NCursesManager.cpp
src/model/: Aircraft.cpp  Aircraft.h  aircraft.cpp  aircraft.h
src/model/fcs/: FcsCommand.h  FcsStrategy.cpp  FcsStrategy.h  FcsStrategyFactory.h  Input.cpp  Input.h  fcsStrategy.cpp  fcsStrategy.h  input.cpp  throttle.cpp  throttle.h
src/model/fcs/actions/: Brake.cpp  Brake.h  Engine.cpp  Engine.h  Pitch.cpp  Pitch.h  Roll.cpp  Roll.h  Throttle.cpp  Throttle.h  Yaw.cpp  Yaw.h  brake.cpp  brake.h  pitch.cpp  pitch.h  roll.cpp  roll.h  throttle.cpp  throttle.h  yaw.cpp  yaw.h
src/util/: NCursesManager.cpp  NCursesManager.h  nCursesManager.cpp  nCursesManager.h
